update: change category table name to app
